--- a/main.html
+++ b/main.html
@@ -4,10 +4,13 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Why I want to become a developer?</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p>-Its my aim to become a software developer.<br></p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
