--- a/main.html
+++ b/main.html
@@ -4,12 +4,14 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<title>Why I want to become a developer?</title>
+	<title></title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p>-Its my aim to become a software developer.<br></p>
+	<h1>Why I want to become a developer?</h1>
+	<p>-Its my aim to become a software developer.<br>
+	and I love coding.</p>
 	
     <script type="text/javascript" src="./script.js">
 </script>
